48
================

18/09/23 Include default medical profiles for exams and surgeries #946
18/09/23 Fix layout bug to fosterer mode introduced by #1290
17/09/23 Use outer join from waitinglist to species in case of broken forms
15/09/23 Audit unit changes #1290
15/09/23 Online forms: remember previously processed forms between reloads
15/09/23 Daily observations: Show location counts and hide empty locations #489
15/09/23 Clear button for reserve/sponsor, option to turn it off #1290
14/09/23 Use a dedicated reserve/sponsor unit permission #1290
14/09/23 Show reserved units in the add/edit animal unit list #1290
13/09/23 Add UNITSPONSOR attribute to animal data with matching wordkey
13/09/23 Allow units within a location to be reserved and sponsored #1290
13/09/23 Email upto 3 fosterer/coordinators if multiple reserveanimalname present
11/09/23 type hints, medica, movement #1320
07/09/23 type hints, media #1320
06/09/23 Throw readable exception if account exists during payment type create
06/09/23 Do not create new account if specified during payment type create
06/09/23 Use shorter married format {first1} & {first2} {surname} for couples
05/09/23 Hide frame around home page animal links if they are hidden
05/09/23 PetRescue: Move org specific fields to config instead of as additional
04/09/23 Fix overview counts to exclude non-archived where necessary
01/09/23 Add overview counts to homepage, tidy up layout
31/08/23 Add picnumber field for PetRescue
30/08/23 type hints, log, lookup and lostfound modules #1320
30/08/23 type hints, html module #1320
29/08/23 Fix date parsing bug for Sweden caused by refactoring
29/08/23 Renew licence button now calculates dates correctly #728
29/08/23 Minor layout/style tweaks to animal links on home/shelterview
29/08/23 Refactor all unit tests to use self.assertX instead of assert #1323
29/08/23 Check for invalid waiting list put on date as well as blank
28/08/23 New cron task for maint_db_dump_zip 