@@ -1324,6 +1324,16 @@ $(function() {
                 '<td><input data="FostererEmailsReplyTo" id="femailreplyto" type="text" class="asm-doubletextbox" /></td>',
                 '</tr>',
                 '<tr>',
+                '<td><label for="femailsendday">' + _("Send the email on") + '</label></td>',
+                '<td><select data="FostererEmailSendDay" id="femailsendday" class="asm-selectbox">',
+                '<option value="0">' + _("Monday") + '</option><option value="1">' + _("Tuesday") + '</option>',
+                '<option value="2">' + _("Wednesday") + '</option><option value="3">' + _("Thursday") + '</option>',
+                '<option value="4">' + _("Friday") + '</option><option value="5">' + _("Saturday") + '</option>',
+                '<option value="6">' + _("Sunday"),
+                '</select>',
+                '</td>',
+                '</tr>',
+                '<tr>',
                 '<td><label for="femailmsg">' + _("Add an extra message to the fosterer email") + '</label></td>',
                 '<td><div data="FostererEmailsMsg" id="femailmsg" data-margin-top="24px" data-height="100px" data-width="380px" class="asm-richtextarea"></div></td>',
                 '</tr>',
